test-cases/negative/test_056_class_missing_property_type.lay
# negative test: class property without type
# expected: parser should reject this

define class Person
  the property name


